[package]
name = "quad-svg"
version = "0.1.1"
edition = "2021"
description = "render svg to macroquad::texture::Texture2D using resvg"
license = "MIT/Apache-2.0"
repository = "https://github.com/macnelly/quad-svg/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.0"
resvg = "0.28.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
